default/objects/CCS_Bonus__c/CCS_Bonus__c.object-meta.xml
<CustomObject>
    <description>Předplacené dobíjecí karty, předplacené jednorázové karty, firemní předplacené dobíjecí karty (CCS Bonus, Bonus+, Bonus Fleet).</description>
    <label>CCS Bonus</label>
    <nameField>
        <label>Název objednávky (CCS Bonus)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CCS Bonus</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>