default/objects/CCS_Bonus__c/fields/CCS_MerlinID__c.field-meta.xml
<CustomField>
    <fullName>CCS_MerlinID__c</fullName>
    <label>CCS MerlinID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>