default/objects/CCS_Bonus__c/fields/Celkem_financni_naboj__c.field-meta.xml
<CustomField>
    <fullName>Celkem_financni_naboj__c</fullName>
    <description>Celkem finanční náboj.</description>
    <inlineHelpText>Celkem finanční náboj.</inlineHelpText>
    <label>Celkem finanční náboj</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>