default/objects/CCS_Bonus__c/fields/Chci_aktivovat_sluzbu_hromadne_dobijeni__c.field-meta.xml
<CustomField>
    <fullName>Chci_aktivovat_sluzbu_hromadne_dobijeni__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Chci aktivovat službu hromadné dobíjení.</description>
    <inlineHelpText>Chci aktivovat službu hromadné dobíjení.</inlineHelpText>
    <label>Chci aktivovat službu hromadné dobíjení</label>
    <type>Checkbox</type>
</CustomField>