default/objects/CCS_Bonus__c/fields/Klient__c.field-meta.xml
<CustomField>
    <fullName>Klient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Kterého klientského účtu se objednávka týká?</description>
    <inlineHelpText>Kterého klientského účtu se objednávka týká?</inlineHelpText>
    <label>Klient</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CCS Bonus</relationshipLabel>
    <relationshipName>CCS_Bonus</relationshipName>
    <type>Lookup</type>
</CustomField>