default/objects/CCS_Bonus__c/fields/Number_of_Cards__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Cards__c</fullName>
    <label>Počet karet celkem</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>