default/objects/CCS_Bonus__c/fields/Pocet_objednavanych_variant_karet__c.field-meta.xml
<CustomField>
    <fullName>Pocet_objednavanych_variant_karet__c</fullName>
    <description>Počet objednávaných variant karet.</description>
    <inlineHelpText>Počet objednávaných variant karet.</inlineHelpText>
    <label>Počet objednávaných variant karet</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>