default/objects/CCS_Bonus__c/fields/Poplatek_za_vystaveni__c.field-meta.xml
<CustomField>
    <fullName>Poplatek_za_vystaveni__c</fullName>
    <description>Poplatek za vystavení.</description>
    <inlineHelpText>Poplatek za vystavení.</inlineHelpText>
    <label>Poplatek za vystavení</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>