default/objects/CCS_Bonus__c/fields/Poznamka_k_objednavce__c.field-meta.xml
<CustomField>
    <fullName>Poznamka_k_objednavce__c</fullName>
    <description>Poznámka k objednávce.</description>
    <inlineHelpText>Poznámka k objednávce.</inlineHelpText>
    <label>Poznámka k objednávce</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>