default/objects/CCS_Bonus__c/fields/Prilezitost__c.field-meta.xml
<CustomField>
    <fullName>Prilezitost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Které příležitosti se objednávka týká?</description>
    <inlineHelpText>Které příležitosti se objednávka týká?</inlineHelpText>
    <label>Příležitost</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>CCS Bonus</relationshipLabel>
    <relationshipName>CCS_Bonus</relationshipName>
    <type>Lookup</type>
</CustomField>