default/objects/CCS_Bonus__c/fields/Typ_objednavky__c.field-meta.xml
<CustomField>
    <fullName>Typ_objednavky__c</fullName>
    <description>Zde např. CCS Bonus, Bonus+, Bonus Fleet.</description>
    <inlineHelpText>Zde např. CCS Bonus, Bonus+, Bonus Fleet.</inlineHelpText>
    <label>Typ objednávky</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CCS Bonus</fullName>
                <default>true</default>
                <label>CCS Bonus</label>
            </value>
            <value>
                <fullName>CCS Bonus+</fullName>
            </value>
            <value>
                <fullName>CCS Bonus Fleet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>