default/objects/CCS_Bonus__c/listViews/CCS_Web_Leads_CCS_Bonus.listView-meta.xml
<ListView>
    <fullName>CCS_Web_Leads_CCS_Bonus</fullName>
    <filterScope>Queue</filterScope>
    <label>CCS Web Leads</label>
    <queue>CCS_Web_Leads</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>